--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,18 +1,41 @@
 annotated-types==0.5.0
 anyio==3.7.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
 click==8.1.7
 fastapi==0.103.1
+filelock==3.12.4
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+Jinja2==3.1.2
+llvmlite==0.41.0
+MarkupSafe==2.1.3
+more-itertools==10.1.0
+mpmath==1.3.0
+networkx==3.1
+numba==0.58.0
+numpy==1.25.2
+openai-whisper==20230918
+pycparser==2.21
 pydantic==2.4.0
 pydantic_core==2.10.0
+pydub==0.25.1
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0.1
+regex==2023.8.8
+requests==2.31.0
 sniffio==1.3.0
+soundfile==0.12.1
 starlette==0.27.0
+sympy==1.12
+tiktoken==0.3.3
+torch==2.0.1
+tqdm==4.66.1
 typing_extensions==4.8.0
+urllib3==2.0.5
 uvicorn==0.23.2
 uvloop==0.17.0
 watchfiles==0.20.0
